--- a/static/offline.html
+++ b/static/offline.html
@@ -24,12 +24,28 @@
     }
     h1 { margin: 0 0 10px; font-size: 22px; }
     p { margin: 0; color: #b6c8d8; line-height: 1.45; }
+    button {
+      border: 1px solid #335271;
+      background: #1db6ab;
+      color: #072129;
+      font-weight: 700;
+      border-radius: 10px;
+      padding: 10px 14px;
+      cursor: pointer;
+    }
   </style>
 </head>
 <body>
   <div class="card">
     <h1>You are offline</h1>
-    <p>The app could not reach the server. Reconnect and refresh to continue using live data.</p>
+    <p style="margin-bottom:12px;">The app could not reach the server. Reconnect and try again to continue using live data.</p>
+    <button id="retryBtn" type="button">Retry</button>
+    <p style="margin-top:12px; font-size:13px;">If this app was installed on iPhone, open it again after reconnecting.</p>
   </div>
+  <script>
+    document.getElementById("retryBtn")?.addEventListener("click", function () {
+      window.location.reload();
+    });
+  </script>
 </body>
 </html>
